[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
opt-level = "z"        # optimize for SIZE -> smaller .so -> lower devnet deploy rent
lto = "fat"
codegen-units = 1
strip = true           # drop symbols
panic = "abort"        # Solana aborts anyway; removes unwinding code

[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1
