[package]
name = "kzp_circle"
version = "0.1.0"
edition = "2021"

# Stand alone — NOT part of the root Anchor workspace.
[workspace]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.26"
borsh = "0.10.4"
spl-token = { version = "4.0.3", default-features = false }

[profile.release]
overflow-checks = true
opt-level = "z"
lto = "true"
codegen-units = 1
strip = true
