[package]
name = "standing_order"
version = "0.1.0"
description = "A trustless standing order: the subscription that can't overcharge you"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "standing_order"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
